refactor for swagger support and add cors
